--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">自定义Camera</string>
-    
+    <string name="hello">Hello World!</string>
+    <string name="app_name">相机</string>
+
     <!-- UI Elements -->
     <string name="btn_capture">Click</string>
-    
+
     <!-- Toast Messages -->
     <string name="camera_not_found">No camera harware found</string>
     <string name="take_photo_help">Touch anywhere on screen to take picture</string>
